workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_set_base_shape_command__non_base_shape_result.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: non_base_shape_result.unwrap_err()
---
Validation(
    "Command failed validation: base shape must exist to set base shape, \"SetBaseShape(SetBaseShape { shape_id: \\\"shape_1\\\", base_shape_id: \\\"shape_2\\\" })\"",
)
